--- a/style.css
+++ b/style.css
@@ -3,9 +3,28 @@ body {
     font-family:'Courier New', Courier, monospace;
 }
 
+.image {
+	background-image: url(https://image.freepik.com/free-vector/realistic-studio-lights-empty-background-design_1017-27233.jpg);
+	height: 250px;
+}
+
+.bg-image{
+    background-image: url(https://blog.prezi.com/wp-content/uploads/2019/03/jason-leung-479251-unsplash.jpg);
+    
+}
+
+.header {
+	padding-top: 50px;
+	color: white;
+	font-size: 20px;
+	text-align: center;
+}
+
 .logo{
     font-size: 0.9rem;
     color: var(--text);
+    font-weight: bold;
+    font-size: 30px;
 }
 
 header{
@@ -18,6 +37,7 @@ header{
     padding: 2em 3em;
     transition: background 250ms ease-in;
 }
+
 
 .list{
     list-style: none;
@@ -33,6 +53,7 @@ header{
     font:0.9rem;
     color: inherit;
     padding: 10px;
+    font-weight: bold;
 }
 
 .nav-links:after{
@@ -44,3 +65,81 @@ header{
 .nav-links:hover::after{
     transform:scaleX(1);
 }
+
+.about {
+    padding: 4em 0;
+    max-width: 900px;
+    margin: 0 auto;
+    opacity: 0;
+    font-weight: bolder;
+  }
+
+  .about {
+    animation: come-in 0.8s ease forwards;
+  }
+
+
+  .main-grid {
+    background: transparent;
+    padding-left: 20em ;
+    padding-bottom: 4em;
+    display: grid;
+    grid-gap: 2em;
+    align-items: center;
+    grid-template-columns: minmax(1em, 1fr) repeat(2, minmax(200px, 400px)) minmax(
+        1em,
+        1fr
+      );
+  }
+  
+  .from-left {
+    border-radius: 8px;
+    opacity: 0;
+  }
+
+  .from-right {
+    border-radius: 8px;
+    opacity: 0;
+  }
+
+
+
+.from-left {
+    grid-column: 2 / 3;
+    transform: translateX(-50%);
+    animation: come-in 0.8s ease forwards;
+    
+}
+.from-right{
+    grid-column: 2 / 3;
+    transform: translateX(50%);
+}
+.slide-in{
+    font-weight: bolder;
+    color:white;
+    -webkit-transition: opacity 200ms ease-in-out;
+    -ms-transition: opacity 200ms ease-in-out;
+    -moz-transition: opacity 200ms ease-in-out;
+    -o-transition: opacity 200ms ease-in-out;
+    transition: opacity 200ms ease-in-out;
+    position: relative;
+    margin-top: 20px;
+    clear: both;
+}
+
+.resume-section{
+    margin: auto;
+    width: 100%;
+    padding-left: 800px;
+    opacity: 0;
+    padding-bottom: 10rem;
+}
+
+footer {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: lightgray;
+    padding-left: 800px;
+  }
+  
+  
