--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header{
     margin: 0 auto;
     opacity: 0;
     font-weight: bolder;
+    font-size: 20px;
   }
 
   .about {
@@ -125,6 +126,7 @@ header{
     position: relative;
     margin-top: 20px;
     clear: both;
+    font-size: 20px;
 }
 
 .resume-section{
